--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages section">
   <div class="container">
     <h2 class="advantages_title visually-hidden" id="advantages">Advantages</h2>
     <ul class="advantages_list list">
