--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,20 +3,20 @@
     <h2 class="advantages_title visually-hidden" id="advantages">Advantages</h2>
     <ul class="advantages_list list">
       <li class="advantages_item">
-        <p class="advantages_name">721</p>
-        <p class="advantages_text">
+        <p class="advantages_name" data-aos="fade-right">721</p>
+        <p class="advantages_text" data-aos="fade-left">
           Aliquam ac dui vel dui vulputaпte consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages_item">
-        <p class="advantages_name">16kg</p>
-        <p class="advantages_text">
+        <p class="advantages_name" data-aos="fade-right">16kg</p>
+        <p class="advantages_text" data-aos="fade-left">
           Aliquam ac dui vel dui vulputaпte consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages_item">
-        <p class="advantages_name">84</p>
-        <p class="advantages_text">
+        <p class="advantages_name" data-aos="fade-right">84</p>
+        <p class="advantages_text" data-aos="fade-left">
           Aliquam ac dui vel dui vulputaпte consectetur. Mauris massa.
         </p>
       </li>
